2005-02-24  Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	plugins/message-view/anjuta-msgman.c,
	plugins/message-view/anjuta-msgman.h,
	plugins/message-view/plugin.c: Added and implemented
	set_view_title() method.
	
	* plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/build-basic-autotools/build-basic-autotools.h: Implemented
	build context pooling. Maximum 3 contexts are reused. Additional
	contexts are created when all are busy.

2005-02-23  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/macro/macro-actions.c, plugins/macro/macro-db.[ch],
	plugins/macro/macro-dialog.c, plugins/macro/macro-util.[ch],
	plugins/macro/macros.xml, plugins/macro/plugin.[ch],
	plugins/file-wizard/action-callbacks.c, plugins/file-wizard/file.c :

	Added Copyright, Changelog macros.
		
2005-02-23  Naba Kumar  <naba@gnome.org>

	Patch from Massimo Cora' <maxcvs@email.it>:
	* plugins/Makefile.am,
	plugins/patch/Makefile.am,
	(added) plugins/patch/anjuta-patch-plugin.png,
	(added) plugins/patch/anjuta-patch.plugin.in,
	(added) plugins/patch/anjuta-patch.ui,
	plugins/patch/patch-plugin.c,
	(added) plugins/patch/patch-plugin.h,
	(added) plugins/patch/plugin.c,
	(added) plugins/patch/plugin.h: Ported patch plugin to Anjuta 2.0
	architecture.

2005-02-23  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-marshal.list, libanjuta/anjuta-plugin.[ch],
	file-loader/plugin.c, profile-default/plugin.c:
	Implemented "activated" and "deactivated" signals for plugin class.
	Renamed *_location() functions to *_id(), because location is
	ambiguous. Implemented anjuta_plugins_unload_plugin_by_id() and
	anjuta_plugins_unload_plugin().
	
	* class-gen/plugin.c: Fixed complier warning and utility function call.
	
	* debug-manager/plugin.c: Unload debugger plugin correctly.
	
	* project-manager/plugin.c:	Fixed compiler warnings.
	
	* plugins/project-wizard/templates/gnome/.cvsignore,
	plugins/project-wizard/templates/gnome/po/.cvsignore,